fix: change css to scss

--- a/src/components/post-list/post-list.scss
+++ b/src/components/post-list/post-list.scss
@@ -2,6 +2,6 @@
   margin-top: 50px;
 }
 .app-list .list-group-item {
-  padding: 20px 35px 10px 35px;
+  padding: 20px 35px;
   margin-top: 10px;
 }
