--- a/public/index.css
+++ b/public/index.css
@@ -6,8 +6,9 @@
 }
 body {
     overflow-x: hidden;
-    background: url('img/got.jpeg') center center no-repeat;
-    background-size: cover;
+    /* background: url('img/got.jpeg') center center no-repeat; */
+    /* background-size: cover; */
+    background-color: azure;
     font-size: 16px;
     height: 100vh;	
 }
